--- a/watchtv/client/src/Styles/SignUp.css
+++ b/watchtv/client/src/Styles/SignUp.css
@@ -22,32 +22,32 @@ body {
     display: flex;
     align-items: center;
     position: absolute;
-    top: 17px; 
-    left: 4%; 
+    top: 1rem; 
+    left: 0.5rem; 
     color: rgb(0, 217, 255);
     text-align: left; 
     font-family: Arial, sans-serif;
   }
   
   .signup-tv-icon {
-    width: 50px;
+    width: 3rem;
   }
   
   .signup-text-overlay h1 {
-    font-size: 35px;
+    font-size: 2.187rem;
     margin: 0;
-    padding-top: 6px;
-    padding-left: 15px;
+    padding-top: 0.375rem; /* 6px */
+    padding-left: 0.9375rem;
   }
   
   .signup-form-wrapper {
     position: absolute;
     left: 50%;
     top: 50%;
-    border-radius: 4px;
-    padding: 50px;
-    width: 350px;
-    height: 67%;
+    border-radius: 0.25rem; /* 4px */
+    padding: 3.125rem; /* 50px */
+    width: 21.875rem; /* 350px */
+    min-height: 31.25rem; /* 500px */
     transform: translate(-50%, -50%);
     background: rgba(0, 0, 0, 0.55);
   }
@@ -60,25 +60,26 @@ body {
   }
   
   .signup-form-wrapper form {
-    margin: 25px 0 65px;
+    margin: 1.5625rem 0 4.0625rem;
   }
   
   .signup-form-control {
-    height: 50px;
+    height: 3.125rem;
     position: relative;
-    margin-bottom: 35px;
+    margin-bottom: 2.1875rem;
   }
   
   .signup-form-control input {
     height: 100%;
-    width: 94%;
+    width: 100%;
     background: rgb(205, 204, 204);
     border: none;
     outline: none;
-    border-radius: 4px;
+    border-radius: 0.25rem;
     color: black;
     font-size: 1rem;
-    padding-left: 20px;
+    padding-left: 1.25rem;
+    box-sizing: border-box;
   }
   
   .signup-form-control input:is(:focus, :valid) {
@@ -87,7 +88,7 @@ body {
   
   .signup-form-control label {
     position: absolute;
-    left: 20px;
+    left: 1.25rem;
     top: 50%;
     transform: translateY(-50%);
     font-size: 1.6rem;
@@ -103,17 +104,17 @@ body {
   
   .signup-form-wrapper button {
     width: 100%;
-    padding: 16px 0;
+    padding: 1rem 0;
     font-size: 1.3rem;
     background: rgb(1, 1, 214);
     color: #fff;
     font-weight: 600;
-    border-radius: 4px;
+    border-radius: 0.25rem;
     border: none;
     outline: none;
-    margin-top: 30px;
+    margin-top: 1.875rem; /* 30px */
     cursor: pointer;
-    transition: 0.1s ease;
+    transition: background 0.1s ease;
   }
   
   .signup-form-wrapper button:hover {
@@ -122,6 +123,8 @@ body {
   
   .signup-form-wrapper a {
     text-decoration: none;
+    color: rgb(9, 210, 245);
+    font-size: 1.2rem;
   }
   
   .signup-form-wrapper a:hover {
@@ -147,10 +150,25 @@ body {
   .signup-form-control input.signup-input-error {
     border: 1px solid red; /* Red border for error */
   }
+
+  .signup-password-icon {
+    position: absolute;
+    right: 1rem;
+    top: 50%;
+    transform: translateY(-50%);
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+  }
+
+  .signup-password-icon img {
+    width: 1.125rem;
+    height: 1.125rem;
+  }
   
   .signup-error-icon {
     position: absolute;
-    right: 10px;
+    right: 0.625rem;
     top: 50%;
     transform: translateY(-50%);
     cursor: pointer;
@@ -159,9 +177,9 @@ body {
   }
   
   .signup-error-icon img {
-    width: 18px;
-    height: 18px;
-    margin-right: 8px;
+    width: 1.125rem;
+    height: 1.125rem;
+    margin-right: 0.5rem; 
   }
   
   .signup-error-message {
@@ -169,12 +187,12 @@ body {
     position: absolute;
     width: 10rem;
     left: 100%;
-    margin-left: 15px;
+    margin-left: 0.9375rem;
     background-color: rgba(255, 0, 0, 0.8);
     color: white;
-    font-size: 12px;
-    padding: 5px;
-    border-radius: 4px;
+    font-size: 0.75rem;
+    padding: 0.3125rem;
+    border-radius: 0.25rem;
     z-index: 10;
   }
   
@@ -189,11 +207,11 @@ body {
     }
   
     nav, .signup-form-wrapper {
-      padding: 20px;
+      padding: 1.25rem;
     }
   
     nav a img {
-      width: 140px;
+      width: 8.75rem;
     }
   
     .signup-form-wrapper {
@@ -204,7 +222,23 @@ body {
     }
   
     .signup-form-wrapper form {
-      margin: 25px 0 40px;
+      margin: 1.5625rem 0 2.5rem;
     }
   }
   
+
+/* Hide browser's built-in eye icon */
+input[type="password"]::-ms-reveal,
+input[type="password"]::-ms-clear,
+input[type="password"]::-webkit-clear-button,
+input[type="password"]::-webkit-inner-spin-button,
+input[type="password"]::-webkit-outer-spin-button {
+    display: none;
+}
+
+/* Autofill prevention */
+input:-webkit-autofill {
+    box-shadow: 0 0 0 100px white inset !important;
+    -webkit-box-shadow: 0 0 0 100px white inset !important;
+    -webkit-text-fill-color: #000 !important;
+}
