--- a/watchtv/client/src/Styles/Upload.css
+++ b/watchtv/client/src/Styles/Upload.css
@@ -14,7 +14,7 @@
     max-width: 500px;
     margin: 15px auto;
     background-color: #ffffff;
-    padding: 2rem;
+    padding: 0 2rem 2rem 2rem;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     border-radius: 12px;
     position: relative;
@@ -124,6 +124,7 @@
 }
 
 .box-label {
+    font-size: 16.5px;
     min-width: 100px;
 }
 
@@ -135,7 +136,7 @@
     padding: 10px;
     border: 1px solid #ccc;
     border-radius: 8px;
-    font-size: 1rem;
+    font-size: 15px;
     color: #333;
     background-color: #ffffff;
     max-width: 100%; /* Ensure inputs do not exceed container width */
@@ -190,8 +191,9 @@
 .upload-controls-container button#cancel {
     background-color: #dc3545;
     color: #fff;
-    margin-left: 4rem;
-    padding: 0 1rem;
+    margin-left: 50px;
+    padding: 0 0.46rem;
+    
 }
 
 .upload-controls-container button#cancel:hover {
@@ -202,6 +204,7 @@
     position: relative;
     width: 100%;
     max-width: 350px;
+    font-size: 15px;
 }
 
 .dropdown-header {
