--- a/watchtv/client/src/Styles/Edit-Profile.css
+++ b/watchtv/client/src/Styles/Edit-Profile.css
@@ -1,4 +1,4 @@
-.edit-profile-container {
+/* .edit-profile-container {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -56,4 +56,4 @@
     border: none;
     border-radius: 4px;
     cursor: pointer;
-}
+} */
