--- a/watchtv/client/src/Styles/Dashboard.css
+++ b/watchtv/client/src/Styles/Dashboard.css
@@ -57,6 +57,7 @@ body.dark-mode .navbar {
   margin-right: 1rem;
   align-items: center;
   position: relative;
+  gap: 30px;
 }
 
 .nav-links a {
@@ -178,36 +179,6 @@ body.dark-mode .genre-dropdown a {
 body.dark-mode .genre-dropdown a:hover {
   background: #333333;
   text-decoration: none;
-}
-
-.nav-links .search-container {
-  position: relative;
-}
-
-.nav-links .search {
-  height: 1.5rem;
-  display: flex;
-  padding-left: 0.5rem;
-  font-size: 1rem;
-  align-items: center;
-  justify-content: center;
-  margin-right: 1rem;
-  border-radius: 1.5625rem; /* 25px */
-  border: none;
-  box-shadow: 0px 0.125rem 0.3125rem rgba(0, 0, 0, 0.2);
-  transition: background-color 0.3s ease;
-}
-
-body.dark-mode .nav-links .search {
-  background-color: #333333;
-  color: #ffffff;
-}
-
-.nav-links .search-icon {
-  position: absolute;
-  right: 1.5rem;
-  bottom: 0.33rem;
-  cursor: pointer;
 }
 
 .toggle-container {
