made some changes

--- a/watchtv/client/src/Styles/Edit-Profile.css
+++ b/watchtv/client/src/Styles/Edit-Profile.css
@@ -52,7 +52,7 @@
     cursor: pointer;
 }
 
-.crop-container {
+.ccrop-container {
     position: relative;
     width: 100%;
     max-width: 160px;
