--- a/watchtv/client/src/Styles/Search.css
+++ b/watchtv/client/src/Styles/Search.css
@@ -37,10 +37,10 @@
     top: 2.5rem; /* Adjust based on the height of your search input */
     left: 0;
     width: 100%;
-    max-height: 200px; /* Adjust height as needed */
+    max-height: 300px; /* Adjust height as needed */
     overflow-y: auto;
     border: 1px solid #ccc;
-    border-radius: 0.5rem;
+    border-radius: 0.3rem;
     box-shadow: 0px 0.25rem 0.375rem rgba(0, 0, 0, 0.1); /* 4px 6px */
     background-color: #fff;
     z-index: 1000;
@@ -98,17 +98,31 @@
   
   .search-container-result::-webkit-scrollbar {
     width: 8px;
+    border-radius: 0.5rem;
+  }
+
+  body.dark-mode .search-container-result::-webkit-scrollbar {
+    filter: invert(1);
   }
   
   .search-container-result::-webkit-scrollbar-thumb {
     background-color: #ccc;
-    border-radius: 4px;
+    border-radius: 3px;
+
+  }
+
+  body.dark-mode .search-container-result::-webkit-scrollbar-thumb {
+    background-color: #333333;
   }
   
   .search-container-result::-webkit-scrollbar-track {
     background-color: #f0f0f0;
+    border-radius: 0.5rem;
   }
   
+  body.dark-mode .search-container-result::-webkit-scrollbar-track {
+    background-color: #111111;
+  }
 
 body.dark-mode .search-input {
     background-color: #333333;
