Get particular content backend made

--- a/watchtv/client/src/Styles/Content.css
+++ b/watchtv/client/src/Styles/Content.css
@@ -148,7 +148,7 @@ body.dark-mode .description {
     color: #ffffff;
 }
 
-.stats {
+.content-stats {
     margin-left: 135px;
     margin-top: 65px;
     display: flex;
