--- a/watchtv/client/src/Styles/Profile.css
+++ b/watchtv/client/src/Styles/Profile.css
@@ -2,7 +2,7 @@
 body {
     margin: 0;
     font-family: Arial, sans-serif;
-    background-color: #fff;
+    background-color: #f0f2f5;
     color: #000;
 }
 
