--- a/watchtv/client/src/Styles/Dashboard.css
+++ b/watchtv/client/src/Styles/Dashboard.css
@@ -15,6 +15,9 @@ body.dark-mode .invert {
   filter: invert(1);
 }
 
+body.dark-mode .Mov-Shows img {
+  filter: invert(1);
+}
 .navbar {
   background-color: #ffffff;
   height: 4rem;
@@ -280,6 +283,10 @@ body.dark-mode .dropdown-item:hover {
 }
 
 .dashboard-container {
+  padding: 0 2% 2% 2%;
+}
+
+.watchlist-container {
   padding: 0 2% 2% 2%;
 }
 
