--- a/watchtv/client/src/Styles/Upload.css
+++ b/watchtv/client/src/Styles/Upload.css
@@ -192,32 +192,32 @@
     margin: 0;
 }
 
-.upload-controls-container button#save {
+.upload-controls-container button#upload-save {
     background-color: #007bff;
     color: #fff;
     box-shadow: 0 4px 6px rgba(0, 123, 255, 0.3);
 }
 
-.upload-controls-container button#save:disabled {
+.upload-controls-container button#upload-save:disabled {
     background-color: #b0bec5;
     color: #fff;
     cursor: not-allowed;
     box-shadow: none;
 }
 
-.upload-controls-container button#save:hover:not(:disabled) {
+.upload-controls-container button#upload-save:hover:not(:disabled) {
     background-color: #0056b3;
     box-shadow: 0 6px 8px rgba(0, 86, 179, 0.3);
 }
 
-.upload-controls-container button#cancel {
+.upload-controls-container button#upload-cancel {
     background-color: #dc3545;
     color: #fff;
     padding: 0 0.46rem;
     box-shadow: 0 4px 6px rgba(220, 53, 69, 0.3);
 }
 
-.upload-controls-container button#cancel:hover {
+.upload-controls-container button#upload-cancel:hover {
     background-color: #a71d2a;
     box-shadow: 0 6px 8px rgba(167, 29, 42, 0.3);
 }
@@ -230,13 +230,13 @@
 }
 
 .dropdown-header {
+    gap: 5px;
     padding: 10px;
     border: 1px solid #ccc;
     border-radius: 8px;
     background-color: #ffffff;
     cursor: pointer;
     display: flex;
-    justify-content: space-between;
     align-items: center;
     font-weight: 100;
     color: #333;
@@ -244,7 +244,7 @@
 }
 
 .dropdown-arrow {
-    margin-left: 10px;
+    margin-left: auto;
 }
 
 .dropdown-options {
@@ -252,6 +252,7 @@
     top: 100%;
     left: 0;
     width: 100%;
+    gap: 5px;
     max-height: 150px;
     overflow-y: auto;
     border: 1px solid #ccc;
@@ -285,6 +286,7 @@
 }
 
 .selected-genre .remove-genre {
+    margin-right: 0;
     width: 10px;
     margin-left: 10px;
     cursor: pointer;
@@ -357,30 +359,30 @@ body.dark-mode .upload-image-container button {
     transition: color 0.3s ease;
 }
 
-body.dark-mode .upload-controls-container button#save {
+body.dark-mode .upload-controls-container button#upload-save {
     background-color: #007bff;
     color: #fff;
     box-shadow: 0 4px 6px rgba(0, 123, 255, 0.3);
 }
 
-body.dark-mode .upload-controls-container button#save:disabled {
+body.dark-mode .upload-controls-container button#upload-save:disabled {
     background-color: #555555;
     color: #fff;
     cursor: not-allowed;
     box-shadow: none;
 }
 
-body.dark-mode .upload-controls-container button#save:hover:not(:disabled) {
+body.dark-mode .upload-controls-container button#upload-save:hover:not(:disabled) {
     background-color: #0056b3;
     box-shadow: 0 6px 8px rgba(0, 86, 179, 0.3);
 }
 
-body.dark-mode .upload-controls-container button#cancel {
+body.dark-mode .upload-controls-container button#upload-cancel {
     background-color: #dc3545;
     box-shadow: 0 4px 6px rgba(220, 53, 69, 0.3);
 }
 
-body.dark-mode .upload-controls-container button#cancel:hover {
+body.dark-mode .upload-controls-container button#upload-cancel:hover {
     background-color: #a71d2a;
     box-shadow: 0 6px 8px rgba(167, 29, 42, 0.3);
 }
@@ -461,7 +463,7 @@ body.dark-mode input[type="number"]::-ms-outer-spin-button {
         margin-left: 0;
     }
 
-    .upload-controls-container button#cancel {
+    .upload-controls-container button#upload-cancel {
         margin-left: 1.4rem;
     }
 }
@@ -484,11 +486,23 @@ body.dark-mode input[type="number"]::-ms-outer-spin-button {
         padding: 8px 16px;
     }
 
-    .upload-controls-container button#cancel {
+    .upload-controls-container button#upload-cancel {
         position: relative;
         right: 38px;
         margin-left: 0;
         padding: 0 8px;
+    }
+
+    .custom-dropdown {
+        max-width: 245px;
+    }
+    .custom-dropdown .selected-genre {
+        font-size: 7.5px;
+        padding: 4px 5px;
+    }
+    .custom-dropdown .selected-genre .remove-genre {
+        font-size: 8px;
+        margin: 0 2px;
     }
 }
 
@@ -512,7 +526,7 @@ body.dark-mode input[type="number"]::-ms-outer-spin-button {
         max-width: 100px !important;
     }
 
-    .upload-controls-container button#cancel {
+    .upload-controls-container button#upload-cancel {
         margin-left: 3.3rem;
         padding: 0 6px;
     }
